crates/compiler/cypress/tests/snapshots/test_parse__minimal_app_header_header_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "app \"test-app\" provides [] to \"./blah\"\n\n"
---
(BeginFile
    (BeginHeaderApp
        String=>String@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
        String=>String@6
    EndHeaderApp)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

