crates/compiler/cypress/tests/snapshots/test_parse__minus_twelve_minus_five_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "-12 - 5\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>Int@0
            InlineBinOpMinus=>OpBinaryMinus@1
            Num=>Int@2
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("-12"), Minus, IntBase10("5"))

[=== formatted below ===]

