crates/compiler/cypress/tests/snapshots/test_parse__multi_char_string_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "\"foo\"\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"foo\"")

[=== formatted below ===]
"foo"
